fix: time popover overflow in slot detail header

--- a/src/components/timePopoverDropdown.module.css
+++ b/src/components/timePopoverDropdown.module.css
@@ -17,8 +17,6 @@
 
 .popover-trigger {
   cursor: pointer;
-  text-decoration: underline dotted
-    var(--popover-trigger-color, var(--secondary-text-color));
   transition: text-decoration-color 0.2s ease;
 
   /* overwrite radix ghost button styles */
@@ -26,7 +24,6 @@
   --button-ghost-padding-y: 2px;
   font: inherit;
   color: inherit;
-  text-align: start;
 
   &:hover {
     text-decoration-color: var(
@@ -34,4 +31,13 @@
       var(--primary-text-color)
     );
   }
+}
+
+.popover-text-underline {
+  position: absolute;
+  color: transparent;
+  text-overflow: clip;
+  text-decoration: underline dotted
+    var(--popover-trigger-color, var(--secondary-text-color));
+  width: 100%;
 }
